--- a/ItemDetails-Page/catalogue/Item-details.html
+++ b/ItemDetails-Page/catalogue/Item-details.html
@@ -128,12 +128,12 @@
             </h2><!--/product_title--><!--product_price-->
             <div class="u-product-control u-product-price u-product-price-1">
               <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
-                <div class="u-hide-price u-old-price" style="text-decoration: line-through !important;"><!--product_old_price_content-->$20.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
-                <div class="u-price u-text-palette-2-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$17.00<!--/product_regular_price_content--></div><!--/product_regular_price-->
+                <div class="u-hide-price u-old-price" style="text-decoration: line-through !important;"><!--product_old_price_content-->R550.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
+                <div class="u-price u-text-palette-2-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->R300.00<!--/product_regular_price_content--></div><!--/product_regular_price-->
               </div>
             </div><!--/product_price--><!--product_content-->
             <div class="u-product-control u-product-desc u-text u-text-2"><!--product_content_content-->
-              <p>Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p><!--/product_content_content-->
+              <p>Sample text.</p><!--/product_content_content-->
             </div><!--/product_content--><!--product_button--><!--options_json--><!--{"clickType":"add-to-cart","content":""}--><!--/options_json-->
             <a href="#" class="u-black u-btn u-button-style u-product-control u-btn-1"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
           </div>
